syntax = "proto3";

option go_package = "github.com/demo/grpc-server/proto";

package helloworld;

service OperacionAritmetica {
  rpc OperarValores (OperacionRequest) returns (OperacionReply) {};
  rpc LlenarJson (LlenarRequest) returns (LlenarReply) {};
}

message OperacionRequest {
  string operacion = 1;
  string valor1 = 2;
  string valor2 = 3;
}

message OperacionReply {
  string resultado = 1;
}

message LlenarRequest {
  string game_id = 1;
  string players = 2;
}
message LlenarReply {
  string winner = 1;
}